--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Antic+Didone&family=DM+Sans&family=Oxygen:wght@300&family=Prata&family=Quicksand:wght@300&family=Raleway+Dots&family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/08880197af.js" crossorigin="anonymous"></script>
+    <title>Amelia Olivarez | Front End Developer</title>
 </head>
 <body>
+    <div class="hero">
     <h1>AMELIA OLIVAREZ</h1>
-    <p>Front End Web Developer</p>
+    <h2 class="mb-4">Front End Web Developer based in Austin, Texas</h2>
+    <div>
+    <a href="#" class="btn btn-branding"> Lets Chat</a>
+    </div>
+</div>
 </body>
 </html>
