More functionally responsive

--- a/index.html
+++ b/index.html
@@ -16,11 +16,39 @@
     <title>Amelia Olivarez | Front End Developer</title>
 </head>
 <body>
-    <div class="hero">
+    <div class="hero mb-5">
     <h1>AMELIA OLIVAREZ</h1>
     <h2 class="mb-4">Front End Web Developer based in Austin, Texas</h2>
     <div>
     <a href="#" class="btn btn-branding"> Lets Chat</a>
+    </div>
+</div>
+<div class="container">
+    <div class="row mb-5">
+        <div class="col-6 d-none d-lg-block">
+            <img src="images/acl.png" class=img-fluid alt=""/>
+        </div>
+        <div class="col">
+            <div class="project-description">
+            <h3 class="mb-4">AUSTIN CITY LIMITS PROJECT</h3>
+            <p>My very first web developing project about ACL Fest. Created in 2021 using HTML and CSS.</p>
+            <a href="" class="btn btn-branding-outline"> Learn more</a>
+        </div>
+     </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row mg-5">
+        <div class="col-6 d-none d-lg-block">
+            <img src="images/weather.png" class=img-fluid alt=""/>
+        </div>
+        <div class="col">
+            <div class="project-description">
+            <h3 class="mb-4">CUSTOM WEATHER APP</h3>
+            <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information.</p>
+            <a href="" class="btn btn-branding-outline"> Learn more</a>
+        </div>
+     </div>
     </div>
 </div>
 </body>
