Adjusted weather app section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 <div class="container">
     <div class="row mb-5">
-        <div class="col-6 d-none d-lg-block">
+        <div class="col d-none d-lg-block">
             <img src="images/acl.png" class=img-fluid alt=""/>
         </div>
         <div class="col">
@@ -37,11 +37,7 @@
      </div>
     </div>
 </div>
-<div class="container">
     <div class="row mg-5">
-        <div class="col-6 d-none d-lg-block">
-            <img src="images/weather.png" class=img-fluid alt=""/>
-        </div>
         <div class="col">
             <div class="project-description">
             <h3 class="mb-4">CUSTOM WEATHER APP</h3>
@@ -49,6 +45,9 @@
             <a href="" class="btn btn-branding-outline"> Learn more</a>
         </div>
      </div>
+        <div class="col d-none d-lg-block">
+            <img src="images/weather.png" class=img-fluid alt=""/>
+        </div>
     </div>
 </div>
 </body>
