--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <div class="hero mb-5">
     <h1>AMELIA OLIVAREZ</h1>
     <h2 class="mb-4">Front End Web Developer based in Austin, Texas</h2>
+        <img src="images/logo.png" class="logo mb-5" alt="">
     <div>
-    <a href="#" class="btn btn-branding"> Lets Chat</a>
+    <a href="#" class="btn btn-branding"> Let's Chat</a>
     </div>
 </div>
 <div class="container">
