--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 <div class="container">
     <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="images/acl.png" class=img-fluid alt=""/>
+            <img src="images/acl.png" class="img-fluid" alt=""/>
         </div>
         <div class="col">
             <div class="project-description">
-            <h3 class="mb-4">AUSTIN CITY LIMITS PROJECT</h3>
-            <p>My very first web developing project about ACL Fest. Created in 2021 using HTML and CSS.</p>
+            <h3 class="mb-4">AUSTIN CITY LIMITS WEBPAGE</h3>
+            <p>My very first web developing project about ACL Fest. Created in 2021 using HTML, CSS, and JavaScript.</p>
             <a href="" class="btn btn-branding-outline"> Learn more</a>
         </div>
     </div>
@@ -41,12 +41,12 @@
         <div class="col">
             <div class="project-description">
             <h3 class="mb-5">CUSTOM WEATHER APP</h3>
-            <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information.</p>
+            <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information for 200+ cities.</p>
             <a href="" class="btn btn-branding-outline"> Learn more</a>
         </div>
      </div>
         <div class="col d-none d-lg-block">
-            <img src="images/weather.png" class=img-fluid alt=""/>
+            <img src="images/weather.png" class=" mb-5 img-fluid" alt=""/>
         </div>
     </div>
 </div>
