Added projects page

--- a/work.html
+++ b/work.html
@@ -13,30 +13,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css" />
     <script src="https://kit.fontawesome.com/08880197af.js" crossorigin="anonymous"></script>
-    <title>About Amelia</title>
+    <title>Amelia's Projects</title>
 </head>
 <body>
     <div class="hero mb-5">
-        <h1>ABOUT AMELIA</h1>
+        <h1>AMELIA'S COMPLETED PROJECTS</h1>
             <img src="images/logo.png" class="logo mb-5" alt="">
     </div>
+<div class="content-container container">
+    <div class="content">
+        <h3 class="mb-4"> Hard work pays off</h3>
 
-    <div class="content-container container">
         <div class="row">
             <div class="col-md-6">
-                <div class="content">
-                    <h3 class="mb-5">Hi I am Amelia Olivarez</h3>
-                    <h4 class="mb-4"> Frontend Developer based in Austin, Texas</h4>
-                    <p class="mb-5">
-                        Amelia moved to Austin from Dallas in 2011 to attend The University of Texas at Austin. After graduating with a degree in Anthropology, she started her career in Tech in 2015. With business analytics and software experience, she began her coding journey when the COVID-19 pandemic hit. She now spends her evenings on coding projects, accompannied by her Husband and cat.
-                    </p>
-                    <a href="" class="mb-5 btn btn-branding"> Check out my projects</a>
-                </div>
+                <img src="images/acl.png" class="mb-5 img-fluid" alt="" />
+                <h4 class="text-center mb-1"><strong>Austin City Limits Webpage Project</strong></h4>
+                <p class="text-center mb-5">Built with HTML and CSS</p>
             </div>
-            <div class="col-md-6">
-                <img src="images/headshot.jpg" alt="" class="mb-5 img-fluid"/>
+            <div class="col">
+                <img src="images/weather.png" class="mb-5 img-fluid" alt="" />
+                <h4 class="text-center mb-1"><strong>Weather App Project</strong></h4>
+                <p class="text-center">Built with HTML, CSS, JavaScript, and API Data</p>
             </div>
         </div>
-    </div>        
+    </div>
+</div>
 </body>
 </html>
