--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
 </div>
 <div class="container">
-    <div class="row mb-5">
+    <div class="row mb-5 text-center">
         <div class="col d-none d-lg-block">
             <img src="images/acl.png" class="img-fluid" alt=""/>
         </div>
-        <div class="col">
+        <div class="col mb-5">
             <div class="project-description">
             <h3 class="mb-4">AUSTIN CITY LIMITS WEBPAGE</h3>
             <p>My very first web developing project about ACL Fest. Created in 2021 using HTML, CSS, and JavaScript.</p>
@@ -37,10 +37,10 @@
         </div>
     </div>
 </div>
-    <div class="row mg-5">
+    <div class="row mg-5 text-center">
         <div class="col">
             <div class="project-description">
-            <h3 class="mb-5">CUSTOM WEATHER APP</h3>
+            <h3 class="mb-3">CUSTOM WEATHER APP</h3>
             <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information for 200+ cities.</p>
             <a href="" class="btn btn-branding-outline"> Learn more</a>
         </div>
