Added nav bar and top corner icon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
     <title>Amelia Olivarez | Front End Developer</title>
 </head>
 <body>
+    <nav>
+        <div class="container">
+            <nav class="d-flex justify-content-between">
+                <a href="/index.html">
+        <img src="images/ao.png" class="logo-header mb-2 d-none d-md-block" alt="">
+    </a>
+        <ul>
+            <li class="active">
+                <a href="/"> Home </a>
+            </li>
+            <li>
+                <a href="/about.html"> About</a>
+            </li>
+            <li>
+                <a href="/work.html"> Work</a>
+            </li>
+            <li>
+                <a href="/contact.html"> Contact</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
     <div class="hero mb-5">
     <h1>AMELIA OLIVAREZ</h1>
     <h2 class="mb-4">Front End Web Developer based in Austin, Texas</h2>
