SEO friendly attributes, added heading on all pages, cleaned up link connections

--- a/about.html
+++ b/about.html
@@ -16,6 +16,27 @@
     <title>About Amelia</title>
 </head>
 <body>
+    <nav>
+        <div class="container">
+            <nav class="d-flex justify-content-between">
+                <a href="/index.html">
+        <img src="images/ao.png" class="logo-header mb-2 d-none d-md-block" alt="">
+    </a>
+        <ul>
+                <a href="/" title="Homepage"> Home </a>
+            </li>
+            <li class="active">
+                <a href="/about.html" title="About Amelia"> About</a>
+            </li>
+            <li>
+                <a href="/work.html" title="Amelia's Work"> Work</a>
+            </li>
+            <li>
+                <a href="/contact.html" title="Contact Amelia"> Contact</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
     <div class="hero mb-5">
         <h1>ABOUT AMELIA</h1>
             <img src="images/logo.png" class="logo mb-5" alt="">
@@ -30,11 +51,11 @@
                     <p class="mb-5">
                         Amelia moved to Austin from Dallas in 2011 to attend The University of Texas at Austin. After graduating with a degree in Anthropology, she started her career in Tech in 2015. With business analytics and software experience, she began her coding journey when the COVID-19 pandemic hit. She now spends her evenings on coding projects, accompannied by her Husband and cat.
                     </p>
-                    <a href="" class="mb-5 btn btn-branding"> Check out my projects</a>
+                    <a href="/work.html" class="mb-5 btn btn-branding"> Check out my projects</a>
                 </div>
             </div>
             <div class="col-md-6">
-                <img src="images/headshot.jpg" alt="" class="mb-5 img-fluid"/>
+                <img src="images/headshot.jpg" alt="Amelia's Headshot" class="mb-5 img-fluid"/>
             </div>
         </div>
     </div>        
