--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </a>
         <ul>
             <li class="active">
-                <a href="/"> Home </a>
+                <a href="/" title="Homepage"> Home </a>
             </li>
             <li>
-                <a href="/about.html"> About</a>
+                <a href="/about.html" title="About Amelia"> About</a>
             </li>
             <li>
-                <a href="/work.html"> Work</a>
+                <a href="/work.html" title="Amelia's Work"> Work</a>
             </li>
             <li>
-                <a href="/contact.html"> Contact</a>
+                <a href="/contact.html" title="Contact Amelia"> Contact</a>
             </li>
         </ul>
     </div>
@@ -41,21 +41,21 @@
     <div class="hero mb-5">
     <h1>AMELIA OLIVAREZ</h1>
     <h2 class="mb-4">Front End Web Developer based in Austin, Texas</h2>
-        <img src="images/logo.png" class="logo mb-5" alt="">
+        <img src="images/logo.png" class="logo mb-5" alt="Amelia logo">
     <div>
-    <a href="#" class="btn btn-branding"> Let's Chat</a>
+    <a href="/contact.html" class="btn btn-branding" title="Contact me"> Let's Chat</a>
     </div>
 </div>
 <div class="container">
     <div class="row mb-5 text-center">
         <div class="col d-none d-lg-block">
-            <img src="images/acl.png" class="img-fluid" alt=""/>
+            <img src="images/acl.png" class="img-fluid" alt="Austin City Limits"/>
         </div>
         <div class="col mb-5">
             <div class="project-description">
             <h3 class="mb-4">AUSTIN CITY LIMITS WEBPAGE</h3>
             <p>My very first web developing project about ACL Fest. Created in 2021 using HTML, CSS, and JavaScript.</p>
-            <a href="" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
         </div>
     </div>
 </div>
@@ -64,11 +64,11 @@
             <div class="project-description">
             <h3 class="mb-3">CUSTOM WEATHER APP</h3>
             <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information for 200+ cities.</p>
-            <a href="" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
         </div>
      </div>
         <div class="col d-none d-lg-block">
-            <img src="images/weather.png" class="mb-5 img-fluid" alt=""/>
+            <img src="images/weather.png" class="mb-5 img-fluid" alt="Weather project"/>
         </div>
     </div>
 </div>
@@ -81,7 +81,7 @@
     </div>
     <div>
         <p class="text-muted d-flex justify-content-between"><strong>Let's work together!</strong></p>
-        <a href="" class="btn btn-branding"> Contact Me</a>
+        <a href="/contact.html" class="btn btn-branding"> Contact Me</a>
     </div>
     </div>
     <div class="d-flex justify-content-center"
