--- a/work.html
+++ b/work.html
@@ -13,9 +13,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/portfolio.css" />
     <script src="https://kit.fontawesome.com/08880197af.js" crossorigin="anonymous"></script>
-    <title>Amelia's Projects</title>
+    <title>Amelia's Work</title>
 </head>
 <body>
+    <nav>
+        <div class="container">
+            <nav class="d-flex justify-content-between">
+                <a href="/index.html">
+        <img src="images/ao.png" class="logo-header mb-2 d-none d-md-block" alt="">
+    </a>
+        <ul>
+            <li>
+                <a href="/" title="Homepage"> Home </a>
+            </li>
+            <li>
+                <a href="/about.html" title="About Amelia"> About</a>
+            </li>
+            <li class="active">
+                <a href="/work.html" title="Amelia's Work"> Work</a>
+            </li>
+            <li>
+                <a href="/contact.html" title="Contact Amelia"> Contact</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
     <div class="hero mb-5">
         <h1>AMELIA'S COMPLETED PROJECTS</h1>
             <img src="images/logo.png" class="logo mb-5" alt="">
