--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 </div>
 <footer>
-    <div class="contact-box d-flex justify-content-between mb-3">
+    <div class="contact-box justify-content-between mb-3 d-md-flex">
         <div>
         <h5>
             <strong>Work Inquiry</strong>
@@ -83,20 +83,6 @@
         <p class="text-muted d-flex justify-content-between"><strong>Let's work together!</strong></p>
         <a href="/contact.html" class="btn btn-branding"> Contact Me</a>
     </div>
-    </div>
-    <div class="d-flex justify-content-center"
-    <a href="mailto:aimc9087@yahoo.com" class="email-link"> 
-        aimc9087@yahoo.com
-    </a> 
-</div>
-    <div class="social-links d-flex justify-content-center"
-    <a href="">
-    <i class="fa-brands fa-github"></i>
-   </a>
-   <a href="">
-    <i class="fa-brands fa-instagram"></i>
-    </a>
-</div>
 </footer>
 </body>
 </html>
