Updated page links, added TW content, fixed bugs

--- a/about.html
+++ b/about.html
@@ -19,20 +19,20 @@
     <nav>
         <div class="container">
             <nav class="d-flex justify-content-between">
-                <a href="/index.html">
+                <a href="index.html">
         <img src="images/ao.png" class="logo-header mb-2 d-none d-md-block" alt="">
     </a>
         <ul>
-                <a href="/" title="Homepage"> Home </a>
+                <a href="index.html" title="Homepage"> Home </a>
             </li>
             <li class="active">
-                <a href="/about.html" title="About Amelia"> About</a>
+                <a href="about.html" title="About Amelia"> About</a>
             </li>
             <li>
-                <a href="/work.html" title="Amelia's Work"> Work</a>
+                <a href="work.html" title="Amelia's Work"> Work</a>
             </li>
             <li>
-                <a href="/contact.html" title="Contact Amelia"> Contact</a>
+                <a href="contact.html" title="Contact Amelia"> Contact</a>
             </li>
         </ul>
     </div>
@@ -51,7 +51,7 @@
                     <p class="mb-5">
                         Amelia moved to Austin from Dallas in 2011 to attend The University of Texas at Austin. After graduating with a degree in Anthropology, she started her career in Tech in 2015. With business analytics and software experience, she began her coding journey when the COVID-19 pandemic hit. She now spends her evenings on coding projects, accompannied by her Husband and cat.
                     </p>
-                    <a href="/work.html" class="mb-5 btn btn-branding"> Check out my projects</a>
+                    <a href="work.html" class="mb-5 btn btn-branding"> Check out my projects</a>
                 </div>
             </div>
             <div class="col-md-6">
