--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <nav>
         <div class="container">
             <nav class="d-flex justify-content-between">
-                <a href="/index.html">
+                <a href="index.html">
         <img src="images/ao.png" class="logo-header mb-2 d-none d-md-block" alt="">
     </a>
         <ul>
             <li class="active">
-                <a href="/" title="Homepage"> Home </a>
+                <a href="index.html" title="Homepage"> Home </a>
             </li>
             <li>
-                <a href="/about.html" title="About Amelia"> About</a>
+                <a href="about.html" title="About Amelia"> About</a>
             </li>
             <li>
-                <a href="/work.html" title="Amelia's Work"> Work</a>
+                <a href="work.html" title="Amelia's Work"> Work</a>
             </li>
             <li>
-                <a href="/contact.html" title="Contact Amelia"> Contact</a>
+                <a href="contact.html" title="Contact Amelia"> Contact</a>
             </li>
         </ul>
     </div>
@@ -43,8 +43,22 @@
     <h2 class="mb-4">Front End Web Developer based in Austin, Texas</h2>
         <img src="images/logo.png" class="logo mb-5" alt="Amelia logo">
     <div>
-    <a href="/contact.html" class="btn btn-branding" title="Contact me"> Let's Chat</a>
+    <a href="contact.html" class="btn btn-branding" title="Contact me"> Let's Chat</a>
     </div>
+</div>
+</div>
+<div class="row mg-5 text-center">
+    <div class="col">
+        <div class="project-description">
+        <h3 class="mb-3">TECHNICAL WRITER PORTFOLIO</h3>
+        <p>A collection of my professionally published technical writing works, including how-to's and manuals on SOPs and softwares.</p>
+        <a href="work.html" class="btn btn-branding-outline"> Learn more</a>
+    </div>
+ </div>
+    <div class="col d-none d-lg-block">
+        <img src="images/techwriting.png" class="img-fluid" alt="Technical Writer"/>
+    </div>
+</div>
 </div>
 <div class="container">
     <div class="row mb-5 text-center">
@@ -55,7 +69,7 @@
             <div class="project-description">
             <h3 class="mb-4">AUSTIN CITY LIMITS WEBPAGE</h3>
             <p>My very first web developing project about ACL Fest. Created in 2021 using HTML, CSS, and JavaScript.</p>
-            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
+            <a href="work.html" class="btn btn-branding-outline"> Learn more</a>
         </div>
     </div>
 </div>
@@ -64,7 +78,7 @@
             <div class="project-description">
             <h3 class="mb-3">CUSTOM WEATHER APP</h3>
             <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information for 200+ cities.</p>
-            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
+            <a href="work.html" class="btn btn-branding-outline"> Learn more</a>
         </div>
      </div>
         <div class="col d-none d-lg-block">
@@ -81,7 +95,7 @@
     </div>
     <div>
         <p class="text-muted d-flex justify-content-between"><strong>Let's work together!</strong></p>
-        <a href="/contact.html" class="btn btn-branding"> Contact Me</a>
+        <a href="contact.html" class="btn btn-branding"> Contact Me</a>
     </div>
 </footer>
 </body>
