--- a/work.html
+++ b/work.html
@@ -19,21 +19,21 @@
     <nav>
         <div class="container">
             <nav class="d-flex justify-content-between">
-                <a href="/index.html">
+                <a href="index.html">
         <img src="images/ao.png" class="logo-header mb-2 d-none d-md-block" alt="">
     </a>
         <ul>
             <li>
-                <a href="/" title="Homepage"> Home </a>
+                <a href="index.html" title="Homepage"> Home </a>
             </li>
             <li>
-                <a href="/about.html" title="About Amelia"> About</a>
+                <a href="about.html" title="About Amelia"> About</a>
             </li>
             <li class="active">
-                <a href="/work.html" title="Amelia's Work"> Work</a>
+                <a href="work.html" title="Amelia's Work"> Work</a>
             </li>
             <li>
-                <a href="/contact.html" title="Contact Amelia"> Contact</a>
+                <a href="contact.html" title="Contact Amelia"> Contact</a>
             </li>
         </ul>
     </div>
