Added href links to working weather application

--- a/work.html
+++ b/work.html
@@ -54,7 +54,8 @@
             </div>
             <div class="col">
                 <img src="images/weather.png" class="mb-5 img-fluid" alt="" />
-                <h4 class="text-center mb-1"><strong>Weather App Project</strong></h4>
+                <h4 class="text-center mb-1"><strong>
+                    <a href="https://weatherbyamelia.com/">Weather App Project</a></strong></h4>
                 <p class="text-center">Built with HTML, CSS, JavaScript, and API Data</p>
             </div>
         </div>
