--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="content">
-                    <h3 class="mb-5">Hi I am Amelia Olivarez</h3>
-                    <h4 class="mb-4"> Frontend Developer based in Austin, Texas</h4>
+                <h3 class="mb-5">Hi I'm Amelia Olivarez!</h3>
+                    <h4 class="mb-4"> Frontend Developer, Technical Writer, & Workforce Manager based in Austin, Texas</h4>
                     <p class="mb-5">
                         Amelia moved to Austin from Dallas in 2011 to attend The University of Texas at Austin. After graduating with a degree in Anthropology, she started her career in Tech in 2015. With business analytics and software experience, she began her coding journey when the COVID-19 pandemic hit. She now spends her evenings on coding projects, accompannied by her Husband and cat.
                     </p>
