--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
     </div>
  </div>
     <div class="col d-none d-lg-block">
-        <img src="images/techwriting.png" class="img-fluid" alt="Technical Writer"/>
+        <img src="images/techwriting.png" class="img-fluid-tech" alt="Technical Writer"/>
     </div>
 </div>
 </div>
+</br>
+</br>
+</br>
+</br>
+</br>
 <div class="container">
     <div class="row mb-5 text-center">
         <div class="col d-none d-lg-block">
@@ -73,11 +78,18 @@
         </div>
     </div>
 </div>
+</br>
+</br>
+</br>
+</br>
+</br>
     <div class="row mg-5 text-center">
         <div class="col">
             <div class="project-description">
             <h3 class="mb-3">CUSTOM WEATHER APP</h3>
-            <p>My first fully functional application using HTML, CSS, JavaScript, and API connection to real time weather information for 200+ cities.</p>
+            <p>
+                <a href="https://weatherbyamelia.com/">My first fully functional application</a> using HTML, CSS, JavaScript, and API connection to real time weather information for 200+ cities.
+            </p>
             <a href="work.html" class="btn btn-branding-outline"> Learn more</a>
         </div>
      </div>
