Included Tech Writer Portfolio

--- a/work.html
+++ b/work.html
@@ -45,7 +45,15 @@
 <div class="content-container container">
     <div class="content">
         <h3 class="mb-4"> Hard work pays off</h3>
-
+        <div class="row">
+            <div class="col-md-3"></div>
+            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTsyZMUUbqPtYnxRSBXvjwL_kVwKWj5-PtvNOHMXxMMFKVJJaDoaAxvhNlMxkE1cBZHh3kpby8tncKG/embed?start=true&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <h4 class="text-center mb-1"><strong>Technical Writer Portfolio</strong></h4>
+                <p class="text-center mb-5">Created and published in Confluence</p>
+            </div>
+        </br>
+    </br>
+</br>
         <div class="row">
             <div class="col-md-6">
                 <img src="images/acl.png" class="mb-5 img-fluid" alt="" />
